updat the changes

--- a/Vitkund/Views/Home/myaccount.cshtml
+++ b/Vitkund/Views/Home/myaccount.cshtml
@@ -186,7 +186,7 @@
                                 <div class="advance-tab-button mb--30">
                                     <ul class="nav nav-tabs tab-button-style-2 justify-content-start" id="settinsTab-4" role="tablist">
                                         <li role="presentation">
-                                            <a href="#" class="tab-button active" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" role="tab" aria-controls="profile" aria-selected="true">
+                                            <a href="#" class="tab-button active" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile1" role="tab" aria-controls="profile" aria-selected="true">
                                                 <span class="title">Profile</span>
                                             </a>
                                         </li>
@@ -200,7 +200,7 @@
                                 </div>
 
                                 <div class="tab-content">
-                                    <div class="tab-pane fade active show" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                                    <div class="tab-pane fade active show" id="profile1" role="tabpanel" aria-labelledby="profile-tab">
 
                                         <!-- Start Profile Row  -->
                                         <form action="#" class="rbt-profile-row rbt-default-form row row--15">
@@ -371,4 +371,7 @@
         $("#btnProfile").addClass('active');
         $("#btnSetting").removeClass('active');
     })
+    //$("#profile-tab").click(function () {
+    //    $('#profile1').show();
+    //})
 </script>
