--- a/Vitkund/Views/Home/Result.cshtml
+++ b/Vitkund/Views/Home/Result.cshtml
@@ -18,7 +18,55 @@
     #chartdiv {
         width: 100%;
         height: 360px;
-        font-size: 11px;
+        font-size: 1.7em !important;
+    }
+    /*   #container {
+        height: 500px;
+    }*/
+    g.highcharts-label.highcharts-data-label {
+        font-size: 2.6em;
+    }
+
+    .highcharts-figure,
+    .highcharts-data-table table {
+        min-width: 320px;
+        max-width: 700px;
+        margin: 1em auto;
+    }
+
+    .highcharts-data-table table {
+        border-collapse: collapse;
+        border: 1px solid #ebebeb;
+        margin: 10px auto;
+        text-align: center;
+        width: 100%;
+        max-width: 500px;
+    }
+
+    .highcharts-data-table caption {
+        padding: 1em 0;
+        font-size: 2.6em;
+        color: #555;
+    }
+
+    .highcharts-data-table th {
+        font-weight: 600;
+        padding: 0.5em;
+    }
+
+    .highcharts-data-table td,
+    .highcharts-data-table th,
+    .highcharts-data-table caption {
+        padding: 0.5em;
+    }
+
+    .highcharts-data-table thead tr,
+    .highcharts-data-table tr:nth-child(even) {
+        background: #f8f8f8;
+    }
+
+    .highcharts-data-table tr:hover {
+        background: #f1f7ff;
     }
 </style>
 <!-- Start Header Area -->
@@ -56,63 +104,172 @@
                     <script src="../Content/assets/js/pie.js"></script>
                     <script src="../Content/assets/js/light.js"></script>
 
-                    <div id="chartdiv"></div>
+                    <script src="https://code.highcharts.com/highcharts.js"></script>
+                    <script src="https://code.highcharts.com/modules/variable-pie.js"></script>
+                    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+                    <script src="https://code.highcharts.com/modules/export-data.js"></script>
+                    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+
+                    <figure class="highcharts-figure">
+                        <div id="chartdiv"></div>
+                    </figure>
 
                     <!-- partial -->
                     <script>
-                    
-                        var chart = AmCharts.makeChart("chartdiv", {
-                            "type": "pie",
-                            "theme": "light",
-                            "dataProvider": [{
-                                "country": "वयः",
-                                "litres": parseInt(localStorage.getItem("Age"))
-                            }, {
-                                "country": "निर्मिमीते",
-                                "litres": parseInt(localStorage.getItem("Firms"))
-                            }, {
-                                "country": "पठन ",
-                                "litres": parseInt(localStorage.getItem("Education"))
-                            }, {
-                                "country": "लाभः प्रतिशतः",
-                                "litres": parseInt(localStorage.getItem("Percent"))
-                            }, {
-                                "country": "अनुभव: ",
-                                "litres": parseInt(localStorage.getItem("Experience"))
-                            }, {
-                                "country": "परिसर",
-                                "litres": parseInt(localStorage.getItem("Premises"))
-                            }, {
-                                "country": "वित्त",
-                                "litres": parseInt(localStorage.getItem("Capital"))
-                            }, {
-                                "country": "मालस्य उपलब्धता",
-                                "litres": parseInt(localStorage.getItem("Material"))
-                            }, {
-                                "country": "अनुसंधानम:",
-                                "litres": parseInt(localStorage.getItem("Research"))
+                        Highcharts.chart('chartdiv', {
+                            chart: {
+                                type: 'variablepie'
                             },
-                            {
-                                "country": "विपणनम्",
-                                "litres": parseInt(localStorage.getItem("Market"))
+                            title: {
+                                text: '',
+                                align: 'left'
                             },
-                            {
-                                "country": "अंक",
-                                "litres": parseInt(localStorage.getItem("Cibil"))
+                            tooltip: {
+                                headerFormat: '',
+                                pointFormat: '<span style="color:{point.color}">\u25CF</span> <b> {point.name}</b><br/>' +
+                                    '</b><br/>' +
+                                    '</b><br/>'
                             },
-                            {
-                                "country": "विशेषज्ञाः",
-                                "litres": parseInt(localStorage.getItem("Expertise"))
-                            }],
-                            "valueField": "litres",
-                            "titleField": "country",
-                            "balloon": {
-                                "fixedPosition": true
+                            series: [{
+                                minPointSize: 10,
+                                innerSize: '20%',
+                                zMin: 0,
+                                name: 'countries',
+                                borderRadius: 5,
+                                enableMouseTracking: false,
+                                data: [{
+                                    name: 'वयः ' + parseInt(localStorage.getItem("Age")) + '',
+                                    y: 505992,
+                                    z: 230
+                                }, {
+                                    name: 'निर्मिमीते: ' + parseInt(localStorage.getItem("Firms")) + '',
+                                    y: 551695,
+                                    z: 240
+                                }, {
+                                    name: 'पठन: ' + parseInt(localStorage.getItem("Education")) + '',
+                                    y: 312679,
+                                    z: 250
+                                }, {
+                                    name: 'लाभ प्रतिशतः ' + parseInt(localStorage.getItem("Percent")) + '',
+                                    y: 423231,
+                                    z: 240
+                                }, {
+                                    name: 'अनुभव: ' + parseInt(localStorage.getItem("Experience")) + '',
+                                    y: 301336,
+                                    z: 230
+                                }, {
+                                    name: 'परिसर: ' + parseInt(localStorage.getItem("Premises")) + '',
+                                    y: 412841,
+                                    z: 220
+                                }, {
+                                    name: 'वित्त: ' + parseInt(localStorage.getItem("Capital")) + '',
+                                    y: 365415,
+                                    z: 235
+                                }
+                                    , {
+                                        name: 'मालस्य उपलब्धता: ' + parseInt(localStorage.getItem("Material")) + '',
+                                    y: 250454,
+                                    z: 245
+                                }
+                                    , {
+                                    name: 'अनुसंधानम: ' + parseInt(localStorage.getItem("Research")) + '',
+                                    y: 365453,
+                                    z: 255
+                                }
+                                    , {
+                                    name: 'विपणनम्: ' + parseInt(localStorage.getItem("Market")) + '',
+                                    y: 254545,
+                                    z: 280
+                                }
+                                    , {
+                                    name: 'अंक: ' + parseInt(localStorage.getItem("Cibil")) + '',
+                                    y: 432341,
+                                    z: 301
+                                }
+                                    , {
+                                        name: 'विशेषज्ञाः ' + parseInt(localStorage.getItem("Expertise")) + '',
+                                    y: 423231,
+                                    z: 314
+                                }
+
+
+
+                                ],
+                                "export": {
+                                "enabled": false
                             },
-                            "export": {
-                                "enabled": true
+                                colors: [
+                                    '#4caefe',
+                                    '#3dc3e8',
+                                    '#2dd9db',
+                                    '#1feeaf',
+                                    '#0ff3a0',
+                                    '#00e887',
+                                    '#23e274',
+                                    '#DE3163',
+                                    '#CCCCFF',
+                                    '#6495ED',
+                                    '#40E0D0',
+                                    '#FFBF00'
+                                ]
+                            }]
+                            ,exporting: {
+                                enabled: false
                             }
                         });
+
+                        //var chart = AmCharts.makeChart("chartdiv", {
+                        //    "type": "pie",
+                        //    "theme": "light",
+                        //    "dataProvider": [{
+                        //        "country": "वयः",
+                        //        "sales": parseInt(localStorage.getItem("Age"))
+                        //    }, {
+                        //        "country": "निर्मिमीते",
+                        //        "sales": parseInt(localStorage.getItem("Firms"))
+                        //    }, {
+                        //        "country": "पठन ",
+                        //        "sales": parseInt(localStorage.getItem("Education"))
+                        //    }, {
+                        //        "country": "लाभः प्रतिशतः",
+                        //        "sales": parseInt(localStorage.getItem("Percent"))
+                        //    }, {
+                        //        "country": "अनुभव: ",
+                        //        "sales": parseInt(localStorage.getItem("Experience"))
+                        //    }, {
+                        //        "country": "परिसर",
+                        //        "sales": parseInt(localStorage.getItem("Premises"))
+                        //    }, {
+                        //        "country": "वित्त",
+                        //        "sales": parseInt(localStorage.getItem("Capital"))
+                        //    }, {
+                        //        "country": "मालस्य उपलब्धता",
+                        //        "sales": parseInt(localStorage.getItem("Material"))
+                        //    }, {
+                        //        "country": "अनुसंधानम:",
+                        //        "sales": parseInt(localStorage.getItem("Research"))
+                        //    },
+                        //    {
+                        //        "country": "विपणनम्",
+                        //        "sales": parseInt(localStorage.getItem("Market"))
+                        //    },
+                        //    {
+                        //        "country": "अंक",
+                        //        "sales": parseInt(localStorage.getItem("Cibil"))
+                        //    },
+                        //    {
+                        //        "country": "विशेषज्ञाः",
+                        //        "sales": parseInt(localStorage.getItem("Expertise"))
+                        //    }],
+                        //    "valueField": "sales",
+                        //    "titleField": "country",
+                        //    "balloon": {
+                        //        "fixedPosition": true
+                        //    },
+                        //    "export": {
+                        //        "enabled": true
+                        //    }
+                        //});
                     </script>
                 </div>
                 <div class="col-lg-6" style="padding-top:50px;">
@@ -126,8 +283,8 @@
 
                     </ol>
                 </div>
-                   <span id="finalresult" style="color:red;text-align:center"></span>
-               
+                <span id="finalresult" style="color:red;text-align:center"></span>
+
                 <div class="col-lg-12">
                     <div class="pricing-btn-group text-center" style="margin-top:50px;">
                         <button class="rbt-btn btn-gradient finalpayment">Pay Now</button>
@@ -155,7 +312,7 @@
         $('#finalresult').hide();
         result();
         $('.finalpayment').click(function () {
-            localStorage.clear();
+            //localStorage.clear();
         });
     });
     function result() {
@@ -194,7 +351,7 @@
         else {
 
         }
-        
+
     }
 </script>
 
